--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       <br><br>
 
       <div class="index-grid-img-1">
-        <a href="categories.html"><img src="images/index-img/anton-levin-P8prss71psk-unsplash.jpg" alt="" srcset=""></a>
-        <a href="categories.html"><img src="images/index-img/bogdan-glisik-2WgOPYJuPsU-unsplash (1).jpg" alt="" srcset=""></a>
-        <a href="categories.html"><img src="images/index-img/calvin-lupiya--yPg8cusGD8-unsplash.jpg" alt=""></a>
+        <a href="categories.html"><img src="anton-levin-P8prss71psk-unsplash.jpg" alt="" srcset=""></a>
+        <a href="categories.html"><img src="bogdan-glisik-2WgOPYJuPsU-unsplash (1).jpg" alt="" srcset=""></a>
+        <a href="categories.html"><img src="calvin-lupiya--yPg8cusGD8-unsplash.jpg" alt=""></a>
         <a href="categories.html"><h4 class="info-of-img-below">For the Young, Wild & Stylish</h4></a>          
         <a href="categories.html"><h4 class="info-of-img-below">Just like your way to Conquer</h4></a>
         <a href="categories.html"><h4 class="info-of-img-below">Stands out like the Sun</h4></a>
@@ -72,12 +72,12 @@
 
     <!-- ALL THE LINKS WILL GO TO products.html -->
       <div class="index-grid-img-2">
-        <a href="products.html"><img src="images/index-img/ethan-haddox-QHGcADeeT00-unsplash.jpg" id="trans-img" alt=""></a> 
-        <a href="products.html"><img src="images/index-img/andres-jasso-PqbL_mxmaUE-unsplash (1).jpg" alt=""></a>
-        <a href="products.html"><img src="images/index-img/raul-hender-afc4HxPy2GM-unsplash (1).jpg" alt=""></a>
-        <a href="products.html"><img src="images/index-img/nike.png" alt="" srcset=""></a>
-        <a href="products.html"><img src="images/index-img/my-shoes2.png" alt="" srcset=""></a>         
-        <a href="products.html"><img src="images/index-img/my-shoes3.png" alt="" srcset=""></a>
+        <a href="products.html"><img src="ethan-haddox-QHGcADeeT00-unsplash.jpg" id="trans-img" alt=""></a> 
+        <a href="products.html"><img src="andres-jasso-PqbL_mxmaUE-unsplash (1).jpg" alt=""></a>
+        <a href="products.html"><img src="raul-hender-afc4HxPy2GM-unsplash (1).jpg" alt=""></a>
+        <a href="products.html"><img src="nike.png" alt="" srcset=""></a>
+        <a href="products.html"><img src="my-shoes2.png" alt="" srcset=""></a>         
+        <a href="products.html"><img src="my-shoes3.png" alt="" srcset=""></a>
     </div>
 
       <h2 class="head-of-offer">STYLES TO STEAL</h2><br>
@@ -86,10 +86,10 @@
       <br><br>
 
       <div class="index-grid-img-3">
-        <a href="products.html"><img src="images/index-img/girl1.png" alt=""></a>
-        <a href="products.html"><img src="images/index-img/girl2.png" alt="" srcset=""></a>
-        <a href="products.html"><img src="images/index-img/girl3.png" alt=""></a>
-        <a href="products.html"><img src="images/index-img/girl4.png" alt="" srcset=""></a>
+        <a href="products.html"><img src="girl1.png" alt=""></a>
+        <a href="products.html"><img src="girl2.png" alt="" srcset=""></a>
+        <a href="products.html"><img src="girl3.png" alt=""></a>
+        <a href="products.html"><img src="girl4.png" alt="" srcset=""></a>
     </div>
     <!-- ALL THE LINKS WILL GO TO products.html -->
 
@@ -141,6 +141,6 @@
     <br>
   <!-- FOOTER -->
 
-  <script type="text/javascript" src="js/nav.js"></script>
+  <script type="javascript" src="nav.js"></script>
   </body>
 </html>
