--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Chivo:300,700|Playfair+Display:700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Beth+Ellen|Nova+Cut&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="css/style_index.css">
-    <link rel="stylesheet" href="css/demo.css">
-    <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/categories.css">
+    <link rel="stylesheet" href="style_index.css">
+    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="categories.css">
 </head>
 <style>
    .slogan{
@@ -58,6 +58,6 @@
     </center>
       
   
-  <script type="text/javascript" src="js/nav.js"></script>
+  <script type="text/javascript" src="nav.js"></script>
   </body>
 </html>
